Update banner paths

--- a/Home.html
+++ b/Home.html
@@ -43,16 +43,16 @@
                             </div>
                             -->
                             <div class="item active">
-                                <a href="https://discord.gg/TmDDYgG"><img src="Images/Banners/2020/May Banners/Join RKS DISCORD Chat.jpg" alt="Join the RKS Discord" style="height: auto; width: 50%"></a>
+                                <a href="https://discord.gg/TmDDYgG"><img src="Images/Banners/2024/Join RKS DISCORD Chat.jpg" alt="Join the RKS Discord" style="height: auto; width: 50%"></a>
                             </div>
                             <div class="item">
-                                <img src="Images/Banners/2020/June Banners/RKSBLM.jpg" alt="RKSBLM" style="height: auto; width: 50%">
+                                <img src="Images/Banners/2024/RKSBLM.jpg" alt="RKSBLM" style="height: auto; width: 50%">
                             </div>
                             <div class="item">
-                                <img src="Images/Banners/2020/May Banners/Social Media.jpg" alt="Social Media" style="height: auto; width: 50%">
+                                <img src="Images/Banners/2024/Social Media.jpg" alt="Social Media" style="height: auto; width: 50%">
                             </div>
                             <div class="item">
-                                <img src="Images/Banners/2020/June Banners/BLM2.png" alt="BLM">
+                                <img src="Images/Banners/2024/BLM2.png" alt="BLM">
                             </div>
                             </div>
 			</div>
